--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/public/styles.css">
+    <title>Tailwind CSS</title>
 </head>
 
 <body>
-
+    <header class="mx-10 py-5 ">
+        <a class="uppercase font-bold text-purple-800" href="#">webDev</a>
+        <nav>
+            <ul class="text-gray-500 font-semibold">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
