--- a/index.html
+++ b/index.html
@@ -13,28 +13,21 @@
     <header class="px-2 border-b flex items-center justify-between">
         <a class="uppercase font-bold text-purple-800" href="#">webDev</a>
         <nav class="flex items-center">
-            <ul class="text-gray-500 font-semibold inline-flex items-center">
+            <ul class=" inline-flex items-center">
                 <li>
-                    <a class="inline-block py-3 px-2 border-b-2 border-transparent hover:text-purple-800 hover:border-purple-800"
-                        href="#">Home</a>
+                    <a class="header-link" href="#">Home</a>
                 </li>
                 <li>
-                    <a class="inline-block py-3 px-2 border-b-2 border-transparent hover:text-purple-800 hover:border-purple-800"
-                        href="#">About</a>
+                    <a class="header-link" href="#">About</a>
                 </li>
                 <li>
-                    <a class="inline-block py-3 px-2 border-b-2 border-transparent hover:text-purple-800 hover:border-purple-800"
-                        href="#">Contact</a>
+                    <a class="header-link" href="#">Contact</a>
                 </li>
             </ul>
             <ul class="inline-flex items-center">
-                <li><button
-                        class="ml-2 py-1 px-3 border-2 rounded-full border-indigo-600 text-indigo-600 hover:text-white hover:bg-indigo-800 focus:outline-none focus:ring focus:ring-violet-300"
-                        type="button">Login</button>
+                <li><button class="header-btn" type="button">Login</button>
                 </li>
-                <li><button
-                        class="ml-2 py-1 px-3 border-2 rounded-full border-indigo-600 text-indigo-600 hover:text-white hover:bg-indigo-800 focus:outline-none focus:ring focus:ring-violet-300"
-                        type="button">Register</button>
+                <li><button class="header-btn" type="button">Register</button>
                 </li>
             </ul>
         </nav>
@@ -97,20 +90,13 @@
         <!-- pagination -->
         <div class="mt-20 mb-10">
             <ul class="flex justify-center">
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 rounded-l-lg"
-                        href="#">Previous</a></li>
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700"
-                        href="#">1</a></li>
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700"
-                        href="#">2</a></li>
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-blue-600 hover:bg-blue-100"
-                        href="#">3</a></li>
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700"
-                        href="#">4</a></li>
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700"
-                        href="#">5</a></li>
-                <li><a class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 rounded-r-lg"
-                        href="#">Next</a></li>
+                <li><a class="pagination-item rounded-l-lg" href="#">Previous</a></li>
+                <li><a class="pagination-item" href="#">1</a></li>
+                <li><a class="pagination-item" href="#">2</a></li>
+                <li><a class="pagination-item text-blue-600 hover:bg-blue-100 hover:text-blue-600" href="#">3</a></li>
+                <li><a class="pagination-item" href="#">4</a></li>
+                <li><a class="pagination-item" href="#">5</a></li>
+                <li><a class="pagination-item rounded-r-lg" href="#">Next</a></li>
             </ul>
         </div>
 
@@ -146,17 +132,13 @@
                 <h6 class="font-semibold text-gray-700 mb-4">Content</h6>
                 <ul>
                     <li>
-                        <a class="inline-block text-gray-500 py-2 hover:underline decoration-gray-700 underline-offset-2"
-                            href="">
-                            Block</a>
+                        <a class="footer-link" href="">Block</a>
                     </li>
                     <li>
-                        <a class="inline-block text-gray-500 py-2 hover:underline decoration-gray-700 underline-offset-2"
-                            href="">Policy</a>
+                        <a class="footer-link" href="">Policy</a>
                     </li>
                     <li>
-                        <a class="inline-block text-gray-500 py-2 hover:underline decoration-gray-700 underline-offset-2"
-                            href="">Documentation</a>
+                        <a class="footer-link" href="">Documentation</a>
                     </li>
                 </ul>
             </div>
