--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="max-w-screen-xl mx-auto">
 
         <!-- header -->
-        <header class="px-2 border-b flex items-center justify-between">
+        <header class="px-2 border-b flex items-center justify-between h-14">
             <a class="uppercase font-bold text-purple-800" href="#">webDev</a>
-            <nav class="flex items-center">
+            <nav class="hidden md:flex items-center">
                 <ul class=" inline-flex items-center">
                     <li>
                         <a class="header-link" href="#">Home</a>
@@ -33,6 +33,13 @@
                     </li>
                 </ul>
             </nav>
+            <button class="inline-block md:hidden" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </button>
         </header>
 
         <!-- breadcrumbs -->
@@ -64,8 +71,8 @@
         </div>
 
         <!-- banners -->
-        <section class="px-2 flex space-x-2">
-            <a class="w-2/3 bg-violet-300 h-96 mb-4 relative rounded inline-block overflow-hidden" href="#">
+        <section class="px-2 lg:flex lg:space-x-2">
+            <a class="w-full lg:w-2/3 bg-violet-300 h-96 mb-4 relative rounded inline-block overflow-hidden" href="#">
                 <div class="p-4 absolute bottom-0 left-0 z-20">
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -73,7 +80,7 @@
                 </div>
             </a>
 
-            <a class="w-1/3 bg-indigo-300 h-96 mb-4 relative rounded inline-block overflow-hidden" href="#">
+            <a class="w-full lg:w-1/3 bg-indigo-300 h-96 mb-4 relative rounded inline-block overflow-hidden" href="#">
                 <div class="p-4 absolute bottom-0 left-0 z-20">
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -83,8 +90,8 @@
         </section>
 
 
-        <main class="flex">
-            <div class="w-2/3">
+        <main class="lg:flex">
+            <div class="w-full lg:w-2/3">
                 <!-- post cards -->
                 <section class="px-2">
                     <a class="block mb-10" href="#">
@@ -149,9 +156,9 @@
                 </div>
             </div>
 
-            <div class="w-1/3 px-2">
+            <div class="w-full lg:w-1/3 px-2 md:flex md:space-x-6 lg:block lg:space-x-0">
                 <!-- topics -->
-                <div class="mb-5">
+                <div class="w-full md:w1/2 mb-5 lg:w-full">
                     <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Popular News</h5>
                     <ul>
                         <li class="px-1 py-4 border-y border-white hover:border-gray-200">
@@ -189,28 +196,30 @@
                     </ul>
                 </div>
 
-                <!-- divider -->
-                <div class="border border-dotted"></div>
+                <div class="w-full md:w1/2 lg:w-full">
+                    <!-- divider -->
+                    <div class="border border-dotte md:hidden lg:block"></div>
 
-                <!-- subscribe -->
-                <div class="my-5">
-                    <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Subscribe</h5>
-                    <p class="text-gray-600 mb-4">Subscribe to our newsletter.</p>
-                    <input type="email" placeholder="your email address"
-                        class="text-gray-700 bg-gray-100 p-2 w-full border rounded-t hover:border-gray-600" />
-                    <button class="px-4 py-2 bg-indigo-600 text-white rounded-b w-full hover:bg-indigo-800"
-                        type="submit">Subscribe</button>
+                    <!-- subscribe -->
+                    <div class="my-5 md:my-0 lg:my-5">
+                        <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Subscribe</h5>
+                        <p class="text-gray-600 mb-4">Subscribe to our newsletter.</p>
+                        <input type="email" placeholder="your email address"
+                            class="text-gray-700 bg-gray-100 p-2 w-full border rounded-t hover:border-gray-600" />
+                        <button class="px-4 py-2 bg-indigo-600 text-white rounded-b w-full hover:bg-indigo-800"
+                            type="submit">Subscribe</button>
+                    </div>
+
+                    <!-- divider -->
+                    <div class="border border-dotted md:hidden lg:block"></div>
                 </div>
-
-                <!-- divider -->
-                <div class="border border-dotted"></div>
             </div>
         </main>
 
         <!-- footer -->
         <footer class="border-t mt-10 py-10 px-2">
-            <div class="flex">
-                <div class="mb-5 w-2/5">
+            <div class="md:flex">
+                <div class="w-full mb-5 md:w-2/5">
                     <h6 class="font-semibold text-gray-700 mb-3">Company</h6>
                     <ul>
                         <li><a class="inline-block text-gray-500 py-2 hover:underline" href="">Team</a></li>
@@ -218,7 +227,7 @@
                     </ul>
                 </div>
 
-                <div class="w-2/5">
+                <div class="w-full mb-5 md:w-2/5">
                     <h6 class="font-semibold text-gray-700 mb-3">Content</h6>
                     <ul>
                         <li>
@@ -233,7 +242,7 @@
                     </ul>
                 </div>
 
-                <div class="w-1/5">
+                <div class="w-full md:w-1/5">
                     <h6 class="font-semibold text-gray-700 mb-3">Contact Us</h6>
                     <ul class="flex">
                         <li class="mr-2">
