--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
                 </ul>
                 <ul class="inline-flex items-center">
-                    <li><button class="header-btn" type="button">Login</button>
+                    <li><button class="header-btn " type="button">Login</button>
                     </li>
                     <li><button class="header-btn" type="button">Register</button>
                     </li>
@@ -45,7 +45,7 @@
         <!-- breadcrumbs -->
         <div class="px-2 flex items-center">
             <div class="py-4 overflow-y-auto whitespace-nowrap flex items-center">
-                <a class="text-gray-600 hover:text-gray-900" href="#">
+                <a class="text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-5 h-5">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -58,7 +58,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
                 </span>
-                <a class="text-gray-600 hover:text-gray-900" href="#">News</a>
+                <a class="text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">News</a>
                 <span class="mx-2 text-gray-300">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-5 h-5">
@@ -66,7 +66,7 @@
                     </svg>
 
                 </span>
-                <a class="text-gray-600 hover:text-gray-900" href="#">Tech</a>
+                <a class="text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">Tech</a>
             </div>
         </div>
 
@@ -80,6 +80,14 @@
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </h2>
+                    <div class="flex mt-3">
+                        <img class="h-10 w-10 rounded-full mr-2 object-cover"
+                            src="https://randomuser.me/api/portraits/men/40.jpg" alt="author">
+                        <div>
+                            <p class="font-semibold text-gray-200 text-sm">John Doe</p>
+                            <time class="text-gray-400 text-xs">14 march</time>
+                        </div>
+                    </div>
                 </div>
             </a>
 
@@ -91,6 +99,14 @@
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </h2>
+                    <div class="flex mt-3">
+                        <img class="h-10 w-10 rounded-full mr-2 object-cover"
+                            src="https://randomuser.me/api/portraits/men/41.jpg" alt="author">
+                        <div>
+                            <p class="font-semibold text-gray-200 text-sm">John Doe</p>
+                            <time class="text-gray-400 text-xs">15 march</time>
+                        </div>
+                    </div>
                 </div>
             </a>
         </section>
@@ -103,16 +119,22 @@
                     <a class="block w-full lg:flex mb-10" href="#">
                         <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="/public/images/img-3.jpg"
                             alt="img">
-                        <div class="flex">
+                        <div class="flex flex-col justify-between">
                             <div>
                                 <h3 class="mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
                                 <p class="text-gray-700">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi possimus animi,
-                                    quam
-                                    nesciunt at enim ab molestiae nostrum accusamus suscipit aliquam perspiciatis quasi
-                                    vel
-                                    laudantium ratione! Quasi dignissimos praesentium mollitia.
+                                    quam nesciunt at enim ab molestiae nostrum accusamus suscipit aliquam perspiciatis
+                                    quasi vel laudantium ratione! Quasi dignissimos praesentium mollitia.
                                 </p>
+                            </div>
+                            <div class="flex mt-3">
+                                <img class="h-10 w-10 rounded-full mr-2 object-cover"
+                                    src="https://randomuser.me/api/portraits/women/45.jpg" alt="author">
+                                <div>
+                                    <p class="font-semibold text-gray-400 text-sm">Jane Doe</p>
+                                    <time class="text-gray-400 text-xs">17 may</time>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -120,7 +142,7 @@
                     <a class="block w-full lg:flex mb-10" href="#">
                         <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="/public/images/img-4.jpg"
                             alt="img">
-                        <div class="flex">
+                        <div class="flex flex-col justify-between">
                             <div>
                                 <h3 class="mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
                                 <p class="text-gray-700">
@@ -131,13 +153,21 @@
                                     laudantium ratione! Quasi dignissimos praesentium mollitia.
                                 </p>
                             </div>
+                            <div class="flex mt-3">
+                                <img class="h-10 w-10 rounded-full mr-2 object-cover"
+                                    src="https://randomuser.me/api/portraits/women/40.jpg" alt="author">
+                                <div>
+                                    <p class="font-semibold text-gray-400 text-sm">Jane Doe</p>
+                                    <time class="text-gray-400 text-xs">9 april</time>
+                                </div>
+                            </div>
                         </div>
                     </a>
 
                     <a class="block w-full lg:flex mb-10" href="#">
                         <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="/public/images/img-5.jpg"
                             alt="img">
-                        <div class="flex">
+                        <div class="flex flex-col justify-between">
                             <div>
                                 <h3 class="mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
                                 <p class="text-gray-700">
@@ -147,6 +177,14 @@
                                     vel
                                     laudantium ratione! Quasi dignissimos praesentium mollitia.
                                 </p>
+                            </div>
+                            <div class="flex mt-3">
+                                <img class="h-10 w-10 rounded-full mr-2 object-cover"
+                                    src="https://randomuser.me/api/portraits/men/42.jpg" alt="author">
+                                <div>
+                                    <p class="font-semibold text-gray-400 text-sm">John Doe</p>
+                                    <time class="text-gray-400 text-xs">14 march</time>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -158,7 +196,7 @@
                         <li><a class="pagination-item rounded-l-lg" href="#">Previous</a></li>
                         <li><a class="pagination-item" href="#">1</a></li>
                         <li><a class="pagination-item" href="#">2</a></li>
-                        <li><a class="pagination-item text-blue-600 hover:bg-blue-100 hover:text-blue-600"
+                        <li><a class="pagination-item text-blue-600 hover:bg-blue-100 hover:text-blue-600 transition-all duration-300"
                                 href="#">3</a>
                         </li>
                         <li><a class="pagination-item" href="#">4</a></li>
@@ -173,7 +211,7 @@
                 <div class="w-full md:w1/2 mb-5 lg:w-full">
                     <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Popular News</h5>
                     <ul>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200">
+                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
                             <a class="flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-green-500 to-green-700"></span>
@@ -181,7 +219,7 @@
                                 <span class="text-gray-500 ml-auto">23 articles</span>
                             </a>
                         </li>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200">
+                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
                             <a class="flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-orange-500 to-orange-700"></span>
@@ -189,7 +227,7 @@
                                 <span class="text-gray-500 ml-auto">20 articles</span>
                             </a>
                         </li>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200">
+                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
                             <a class="flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-red-500 to-red-700"></span>
@@ -197,7 +235,7 @@
                                 <span class="text-gray-500 ml-auto">15 articles</span>
                             </a>
                         </li>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200">
+                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
                             <a class="flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-blue-500 to-blue-700"></span>
@@ -217,8 +255,9 @@
                         <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Subscribe</h5>
                         <p class="text-gray-600 mb-4">Subscribe to our newsletter.</p>
                         <input type="email" placeholder="your email address"
-                            class="text-gray-700 bg-gray-100 p-2 w-full border rounded-t hover:border-gray-600" />
-                        <button class="px-4 py-2 bg-indigo-600 text-white rounded-b w-full hover:bg-indigo-800"
+                            class="text-gray-700 bg-gray-100 p-2 w-full border rounded-t hover:border-gray-600 transition-all duration-300" />
+                        <button
+                            class="px-4 py-2 bg-indigo-600 text-white rounded-b w-full hover:bg-indigo-800 transition-all duration-300"
                             type="submit">Subscribe</button>
                     </div>
 
