--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
+<!-- <html lang="en" class="dark"> -->
 
 <head>
     <meta charset="UTF-8" />
@@ -8,12 +9,12 @@
     <title>Tailwind CSS</title>
 </head>
 
-<body>
+<body class="bg-white dark:bg-slate-900">
     <div class="max-w-screen-xl mx-auto">
 
         <!-- header -->
         <header class="px-2 border-b flex items-center justify-between h-14">
-            <a class="uppercase font-bold text-purple-800" href="#">webDev</a>
+            <a class="dark:text-white uppercase font-bold text-purple-800" href="#">WebNews</a>
             <nav class="hidden md:flex items-center">
                 <ul class=" inline-flex items-center">
                     <li>
@@ -45,7 +46,7 @@
         <!-- breadcrumbs -->
         <div class="px-2 flex items-center">
             <div class="py-4 overflow-y-auto whitespace-nowrap flex items-center">
-                <a class="text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">
+                <a class="dark:text-slate-400 text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-5 h-5">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -58,7 +59,8 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
                 </span>
-                <a class="text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">News</a>
+                <a class="dark:text-slate-400 text-gray-600 hover:text-gray-900 transition-all duration-300"
+                    href="#">News</a>
                 <span class="mx-2 text-gray-300">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-5 h-5">
@@ -66,7 +68,8 @@
                     </svg>
 
                 </span>
-                <a class="text-gray-600 hover:text-gray-900 transition-all duration-300" href="#">Tech</a>
+                <a class="dark:text-slate-400 text-gray-600 hover:text-gray-900 transition-all duration-300"
+                    href="#">Tech</a>
             </div>
         </div>
 
@@ -80,6 +83,8 @@
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </h2>
+                    <span
+                        class="bg-gradient-to-bl from-blue-600 to-indigo-600 text-white inline-flex items-center justify-center px-4 py-1 mb-2">React</span>
                     <div class="flex mt-3">
                         <img class="h-10 w-10 rounded-full mr-2 object-cover"
                             src="https://randomuser.me/api/portraits/men/40.jpg" alt="author">
@@ -99,6 +104,10 @@
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </h2>
+                    <span
+                        class="bg-gradient-to-bl from-blue-600 to-indigo-600 text-white inline-flex items-center justify-center px-4 py-1 mb-2">
+                        Angular
+                    </span>
                     <div class="flex mt-3">
                         <img class="h-10 w-10 rounded-full mr-2 object-cover"
                             src="https://randomuser.me/api/portraits/men/41.jpg" alt="author">
@@ -121,8 +130,8 @@
                             alt="img">
                         <div class="flex flex-col justify-between">
                             <div>
-                                <h3 class="mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
-                                <p class="text-gray-700">
+                                <h3 class="dark:text-white mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
+                                <p class="text-gray-700 dark:text-slate-400">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi possimus animi,
                                     quam nesciunt at enim ab molestiae nostrum accusamus suscipit aliquam perspiciatis
                                     quasi vel laudantium ratione! Quasi dignissimos praesentium mollitia.
@@ -144,8 +153,8 @@
                             alt="img">
                         <div class="flex flex-col justify-between">
                             <div>
-                                <h3 class="mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
-                                <p class="text-gray-700">
+                                <h3 class="dark:text-white mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
+                                <p class="text-gray-700 dark:text-slate-400">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi possimus animi,
                                     quam
                                     nesciunt at enim ab molestiae nostrum accusamus suscipit aliquam perspiciatis quasi
@@ -169,8 +178,8 @@
                             alt="img">
                         <div class="flex flex-col justify-between">
                             <div>
-                                <h3 class="mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
-                                <p class="text-gray-700">
+                                <h3 class="dark:text-white mb-2 text-gray-700 font-bold text-2xl">Lorem ipsum dolor</h3>
+                                <p class="text-gray-700 dark:text-slate-400">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi possimus animi,
                                     quam
                                     nesciunt at enim ab molestiae nostrum accusamus suscipit aliquam perspiciatis quasi
@@ -196,7 +205,7 @@
                         <li><a class="pagination-item rounded-l-lg" href="#">Previous</a></li>
                         <li><a class="pagination-item" href="#">1</a></li>
                         <li><a class="pagination-item" href="#">2</a></li>
-                        <li><a class="pagination-item text-blue-600 hover:bg-blue-100 hover:text-blue-600 transition-all duration-300"
+                        <li><a class="pagination-item dark:text-blue-600 text-blue-600  hover:bg-blue-100 hover:text-blue-600 transition-all duration-300"
                                 href="#">3</a>
                         </li>
                         <li><a class="pagination-item" href="#">4</a></li>
@@ -209,34 +218,38 @@
             <div class="w-full lg:w-1/3 px-2 md:flex md:space-x-6 lg:block lg:space-x-0">
                 <!-- topics -->
                 <div class="w-full md:w1/2 mb-5 lg:w-full">
-                    <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Popular News</h5>
+                    <h5 class="dark:text-white font-bold text-lg uppercase text-gray-700 mb-2">Popular News</h5>
                     <ul>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
-                            <a class="flex items-center text-gray-600" href="#">
+                        <li
+                            class="dark:border-transparent dark:hover:border-gray-200 px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
+                            <a class="dark:text-slate-400 flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-green-500 to-green-700"></span>
                                 Vue
                                 <span class="text-gray-500 ml-auto">23 articles</span>
                             </a>
                         </li>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
-                            <a class="flex items-center text-gray-600" href="#">
+                        <li
+                            class="dark:border-transparent dark:hover:border-gray-200 px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
+                            <a class="dark:text-slate-400 flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-orange-500 to-orange-700"></span>
                                 Svelte
                                 <span class="text-gray-500 ml-auto">20 articles</span>
                             </a>
                         </li>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
-                            <a class="flex items-center text-gray-600" href="#">
+                        <li
+                            class="dark:border-transparent dark:hover:border-gray-200 px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
+                            <a class="dark:text-slate-400 flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-red-500 to-red-700"></span>
                                 Angular
                                 <span class="text-gray-500 ml-auto">15 articles</span>
                             </a>
                         </li>
-                        <li class="px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
-                            <a class="flex items-center text-gray-600" href="#">
+                        <li
+                            class="dark:border-transparent dark:hover:border-gray-200 px-1 py-4 border-y border-white hover:border-gray-200 transition-all duration-300">
+                            <a class="dark:text-slate-400 flex items-center text-gray-600" href="#">
                                 <span
                                     class="inline-block w-4 h-4 mr-3 bg-gradient-to-tr from-blue-500 to-blue-700"></span>
                                 React
@@ -246,14 +259,15 @@
                     </ul>
                 </div>
 
+                <!-- subscribe form -->
                 <div class="w-full md:w1/2 lg:w-full">
                     <!-- divider -->
-                    <div class="border border-dotte md:hidden lg:block"></div>
+                    <div class="border border-dotted md:hidden lg:block"></div>
 
                     <!-- subscribe -->
                     <div class="my-5 md:my-0 lg:my-5">
-                        <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">Subscribe</h5>
-                        <p class="text-gray-600 mb-4">Subscribe to our newsletter.</p>
+                        <h5 class="dark:text-white font-bold text-lg uppercase text-gray-700 mb-2">Subscribe</h5>
+                        <p class="dark:text-slate-400 text-gray-600 mb-4">Subscribe to our newsletter.</p>
                         <input type="email" placeholder="your email address"
                             class="text-gray-700 bg-gray-100 p-2 w-full border rounded-t hover:border-gray-600 transition-all duration-300" />
                         <button
@@ -271,15 +285,15 @@
         <footer class="border-t mt-10 py-10 px-2">
             <div class="md:flex">
                 <div class="w-full mb-5 md:w-2/5">
-                    <h6 class="font-semibold text-gray-700 mb-3">Company</h6>
+                    <h6 class="dark:text-white font-semibold text-gray-700 mb-3">Company</h6>
                     <ul>
-                        <li><a class="inline-block text-gray-500 py-2 hover:underline" href="">Team</a></li>
-                        <li><a class="inline-block text-gray-500 py-2 hover:underline" href="">About Us</a></li>
+                        <li><a class="footer-link " href="">Team</a></li>
+                        <li><a class="footer-link " href="">About Us</a></li>
                     </ul>
                 </div>
 
                 <div class="w-full mb-5 md:w-2/5">
-                    <h6 class="font-semibold text-gray-700 mb-3">Content</h6>
+                    <h6 class="dark:text-white font-semibold text-gray-700 mb-3">Content</h6>
                     <ul>
                         <li>
                             <a class="footer-link" href="">Block</a>
@@ -294,7 +308,7 @@
                 </div>
 
                 <div class="w-full md:w-1/5">
-                    <h6 class="font-semibold text-gray-700 mb-3">Contact Us</h6>
+                    <h6 class="dark:text-white font-semibold text-gray-700 mb-3">Contact Us</h6>
                     <ul class="flex">
                         <li class="mr-2">
                             <a class="footer-link" href="">
