--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Tailwind CSS</title>
 </head>
 
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-slate-900 font-main">
     <div class="max-w-screen-xl mx-auto">
 
         <!-- header -->
